rename accounts.proto messages and services to protobuf guidelines
